Commit for Mobile device

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row header">
-				<div class="col-xs-5 col-md-2 logoHolder">
+				<div class="col-xs-12 col-md-2 logoHolder">
 					<a class="logo" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
 						<div>
 							<img src='images/logo.png'/>
@@ -23,18 +23,18 @@
 					</a>
 				</div>
 				<div class="col-xs-4 col-md-7"></div>
-				<div class="col-md-3 flatMenu">
-					<div class="col-md-4 menuOption">
+				<div class="col-xs-12 col-md-3 flatMenu">
+					<div class="col-xs-4 col-md-4 menuOption">
 						<a class="menuOptionText menuOptionTextSelected" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
 							<div>Portfolio</div>
 						</a>
 					</div>
-					<div class="col-md-4 menuOption">
+					<div class="col-xs-4 col-md-4 menuOption">
 						<a class="menuOptionText" id="AboutMeMenu" onclick="menuSelected(event,this.id)">
 							<div>About Me</div>
 						</a>
 					</div>
-					<div class="col-md-4 menuOption">
+					<div class="col-xs-4 col-md-4 menuOption">
 						<a class="menuOptionText" id="ConnectMenu" onclick="menuSelected(event,this.id)">
 							<div>Connect</div>
 						</a>
