--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Swapnali</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="shortcut icon" href="images/logo.png" />
+		<link rel="shortcut icon" href="images/title_bar_logo.png" />
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/Swapnali.css">
 		<link rel="stylesheet" media='(min-width: 1200px)' href="css/Swapnali_Desktop.css">
