--- a/index.html
+++ b/index.html
@@ -76,16 +76,28 @@
 			</div>
 			<div class="row mainContent mainContentSelected" id="mainContentPortfolioMenu">
 				<div class="col-xs-12 col-md-4 workImage">
-						<img src="images/banner-background.jpg"/>
-						<div class="after"></div>
+						<img src="images/Tadekam.png"/>
+						<a class="after" href="http://tadekam.com/" target="_blank">
+							<div class="portfolioInfo">Tadekam<br/><span>Website</span></div>
+						</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
-					<img src="images/banner-background.jpg"/>
-					<div class="after"></div>
+					<img src="images/Daawat_e_kebab.png"/>
+					<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="portfolioInfo">Daawat-E-Kabab</div>
+					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
-					<img src="images/banner-background.jpg"/>
-					<div class="after"></div>
+					<img src="images/Blah_Blah.png"/>
+					<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="portfolioInfo">Blah Blah</div>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 workImage">
+					<img src="images/Gipoor.png"/>
+					<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="portfolioInfo">Gipoor</div>
+					</a>
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutMeMenu">
