--- a/index.html
+++ b/index.html
@@ -40,39 +40,6 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-3 hamburgerMenu">
-					<button class=" button navbar-toggler hamburgerButton" type="button" data-toggle="collapse" data-target="#menuNavbar">
-						<span class="glyphicon glyphicon-menu-hamburger"></span>
-					</button>
-				</div>
-				<div class="col-xs-12 navbar-collapse collapse" id="menuNavbar" style="height:0px;">
-					<button id="buttonHamburgerClose" class=" button navbar-toggler hamburgerButton" type="button" data-toggle="collapse" data-target="#menuNavbar">
-						<span class="glyphicon glyphicon-remove-circle"></span>
-					</button>
-					<ul class="navbar-nav hamburgerMenuList">
-						<li class="nav-item">
-							<div class="menuOption">
-								<a class="menuOptionText menuOptionTextSelected" id="PortfolioMenuHamburger" onclick="menuSelected(event,this.id)">
-									<div>Portfolio</div>
-								</a>
-							</div>
-						</li>
-						<li class="nav-item">
-							<div class="menuOption">
-								<a class="menuOptionText" id="AboutMeMenuHamburger" onclick="menuSelected(event,this.id)">
-									<div>About Me</div>
-								</a>
-							</div>
-						</li>
-						<li class="nav-item">
-							<div class="menuOption">
-								<a class="menuOptionText" id="ConnectMenuHamburger" onclick="menuSelected(event,this.id)">
-									<div>Connect</div>
-								</a>
-							</div>
-						</li>
-					</ul>
-				</div>
 			</div>
 			<div class="row mainContent mainContentSelected" id="mainContentPortfolioMenu">
 				<div class="col-xs-12 col-md-4 workImage">
@@ -99,26 +66,43 @@
 						<div class="portfolioInfo">Gipoor</div>
 					</a>
 				</div>
+				<div class="col-xs-12 col-md-4 workImage">
+					<img src="images/Cookie_Bites.png"/>
+					<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="portfolioInfo">Cookie Bites</div>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 workImage">
+					<img src="images/Esbee.png"/>
+					<a class="after" href="images/Esbee_Detail.gif" target="_blank">
+						<div class="portfolioInfo">Esbee</div>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 workImage">
+				<img src="images/Nanostics.png"/>
+					<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="portfolioInfo">Nanostics</div>
+					</a>
+				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutMeMenu">
-				<div class="col-md-2"></div>
-				<div class="col-md-8">
-                    <div class="row aboutMeImageHolder">
-                        <img src="images/about_me.png"/>
+				<div class="row aboutMeImageHolder">
+					<div class="row col-md-8">
+						<img src="images/about_me.png"/>
 					</div>
-				
-					<div class="row col-md-12">
-						<div class="aboutMeContent">
-							Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+					<div class="row col-md-4">
+						<div class="row col-md-12">
+							<div class="aboutMeContent">
+								Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+							</div>
 						</div>
-					</div>
-					<div class="row col-md-12">
-						<div class="aboutMeContent">
-							I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+						<div class="row col-md-12">
+							<div class="aboutMeContent">
+								I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-2"></div>
 			</div>
 			<div class="row mainContent" id="mainContentConnectMenu">
 				<div class="col-md-2"></div>
