--- a/index.html
+++ b/index.html
@@ -24,20 +24,32 @@
 				</div>
 				<div class="col-xs-4 col-md-7"></div>
 				<div class="col-xs-12 col-md-3 flatMenu">
-					<div class="col-xs-4 col-md-4 menuOption">
-						<a class="menuOptionText menuOptionTextSelected" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
-							<div>Portfolio</div>
-						</a>
+					<div class="row">
+						<div class="col-md-11 headerSocialMedia">
+							<span>
+								<a href="/" target="_blank"><img src="images/fb_logo.png"/></a>
+							</span>
+							<span>
+								<a href="/" target="_blank"><img src="images/insta_logo.png"/></a>
+							</span>
+						</div>
 					</div>
-					<div class="col-xs-4 col-md-4 menuOption">
-						<a class="menuOptionText" id="AboutMeMenu" onclick="menuSelected(event,this.id)">
-							<div>About Me</div>
-						</a>
-					</div>
-					<div class="col-xs-4 col-md-4 menuOption">
-						<a class="menuOptionText" id="ConnectMenu" onclick="menuSelected(event,this.id)">
-							<div>Connect</div>
-						</a>
+					<div class="row">
+						<div class="col-xs-4 col-md-4 menuOption">
+							<a class="menuOptionText menuOptionTextSelected" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
+								<div>Portfolio</div>
+							</a>
+						</div>
+						<div class="col-xs-4 col-md-4 menuOption">
+							<a class="menuOptionText" id="AboutMeMenu" onclick="menuSelected(event,this.id)">
+								<div>About Me</div>
+							</a>
+						</div>
+						<div class="col-xs-4 col-md-4 menuOption">
+							<a class="menuOptionText" id="ConnectMenu" onclick="menuSelected(event,this.id)">
+								<div>Connect</div>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
