Portfolio detail changes

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentPortfolioDetail">
+				<div class="row closeButton"><img src="images/fb_logo.png" id="PortfolioMenu" onclick="menuSelected(event,this.id)"></div>
 				<div class="row portfolioDetailImageHolder" id="portfolioDetailCalligraphy">
 					<div class="row col-md-12">
 						<img src="images/Calligraphy_Detail.png"/>
