--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 			<div class="row mainContent mainContentSelected" id="mainContentPortfolioMenu">
 				<div class="col-xs-12 col-md-4 workImage">
 						<img src="images/Tadekam.png"/>
-						<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="after col-xs-12 col-md-4" href="http://tadekam.com/" target="_blank">
 							<div class="portfolioInfo">Tadekam<br/><span>Website</span></div>
-						</a>
+						</div>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/Daawat_e_kebab.png"/>
@@ -112,7 +112,7 @@
 				</div>
 				<div class="row portfolioDetailImageHolder" id="portfolioDetailEsbee">
 					<div class="row col-md-12">
-						<img src="images/Esbee_Detail.gif"/>
+						<img src="images/Esbee_Detail.gif" class="centerAlignImage"/>
 					</div>
 				</div>
 			</div>
@@ -136,13 +136,13 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentConnectMenu">
-				<div class="col-md-7 connectImageHolder">
+				<div class="col-md-8 connectImageHolder">
                     <img src="images/connect.png"/>
                 </div>
-				<div class="col-md-5 connectContent">
-					<div class="row noPadding noMargin">
-						<div class="col-md-3 noPadding noMargin"></div>
-						<div class="col-md-6 noPadding noMargin">
+				<div class="col-md-4 connectContent noPadding noMargin">
+					<div class="row">
+						<div class="col-md-2 noPadding noMargin"></div>
+						<div class="col-md-8 noPadding noMargin">
 							<div class="row noPadding noMargin connectContentRow">
 								<div class="col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
 								<div class="col-md-8">+91 8698081168</div>
@@ -171,7 +171,7 @@
 								<div class="col-md-4"><button name="send">Send</button></div>
 							</div>
 						</div>
-						<div class="col-md-3 noPadding noMargin"></div>
+						<div class="col-md-2 noPadding noMargin"></div>
 					</div>
 				</div>
 			</div>
