--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 			</div>
 			<div class="row mainContent mainContentSelected" id="mainContentPortfolioMenu">
 				<div class="col-xs-12 col-md-4 workImage">
-						<img src="images/Tadekam.png"/>
-						<div class="after col-xs-12 col-md-4" href="http://tadekam.com/" target="_blank">
-							<div class="portfolioInfo">Tadekam<br/><span>Website</span></div>
-						</div>
+					<img src="images/Tadekam.png"/>
+					<a class="after" href="http://tadekam.com/" target="_blank">
+						<div class="portfolioInfo">Tadekam<br/><span>Website</span></div>
+					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/Daawat_e_kebab.png"/>
