--- a/index.html
+++ b/index.html
@@ -117,19 +117,23 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutMeMenu">
-				<div class="row aboutMeImageHolder">
-					<div class="row col-md-8">
+				<div class="row">
+					<div class="col-md-8 aboutMeImageHolder">
 						<img src="images/about_me.png"/>
 					</div>
-					<div class="row col-md-4">
-						<div class="row col-md-12">
-							<div class="aboutMeContent">
-								Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
-							</div>
-						</div>
-						<div class="row col-md-12">
-							<div class="aboutMeContent">
-								I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+					<div class="col-md-4">
+						<div class="aboutMeHolder">
+							<div class="aboutMeContainer">
+								<!--<div class="row">-->
+									<div class="aboutMeContent">
+										Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+									</div>
+								<!--</div>-->
+								<!--<div class="row">-->
+									<div class="aboutMeContent">
+										I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+									</div>
+								<!--</div>-->
 							</div>
 						</div>
 					</div>
