--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/Nanostics.png"/>
-					<a class="after">
-						<div class="portfolioInfo" id="PortfolioDetail" name="Nanostics" onclick="menuSelected(event,this.id)">Nanostics</div>
+					<a class="after" href="http://nanosticsdx.com/" target="_blank">
+						<div class="portfolioInfo" name="Nanostics">Nanostics</div>
 					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
@@ -124,16 +124,12 @@
 					<div class="col-md-4">
 						<div class="aboutMeHolder">
 							<div class="aboutMeContainer">
-								<!--<div class="row">-->
-									<div class="aboutMeContent">
-										Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
-									</div>
-								<!--</div>-->
-								<!--<div class="row">-->
-									<div class="aboutMeContent">
-										I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
-									</div>
-								<!--</div>-->
+								<div class="aboutMeContent">
+									Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+								</div>
+								<div class="aboutMeContent">
+									I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+								</div>
 							</div>
 						</div>
 					</div>
