--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutMeMenu">
-				<div class="row">
-					<div class="col-md-8 aboutMeImageHolder">
+				<div class="row noMargin">
+					<div class="col-md-12 aboutMeImageHolder">
 						<img src="images/about_me.png"/>
 					</div>
-					<div class="col-md-4">
+				</div>
+				<div class="row">
+					<div class="col-md-offset-2 col-md-8">
 						<div class="aboutMeHolder">
 							<div class="aboutMeContainer">
 								<div class="aboutMeContent">
