--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <img src="images/connect.png"/>
                 </div>
 				<div class="col-md-4 connectContent noPadding noMargin">
-					<div class="row">
+					<div class="row noMargin">
 						<div class="col-md-2 noPadding noMargin"></div>
 						<div class="col-md-8 noPadding noMargin">
 							<div class="row noPadding noMargin connectContentRow">
