--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<img src="images/about_me.png"/>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row noMargin">
 					<div class="col-md-offset-2 col-md-8">
 						<div class="aboutMeHolder">
 							<div class="aboutMeContainer">
