--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentPortfolioDetail">
-				<div class="row closeButton"><img src="images/fb_logo.png" id="PortfolioMenu" onclick="menuSelected(event,this.id)"></div>
+				<div class="row closeButton"><img src="images/close.png" id="PortfolioMenu" onclick="menuSelected(event,this.id)"></div>
 				<div class="row portfolioDetailImageHolder" id="portfolioDetailCalligraphy">
 					<div class="row col-md-12">
 						<img src="images/Calligraphy_Detail.png"/>
@@ -146,28 +146,28 @@
 						<div class="col-md-2 noPadding noMargin"></div>
 						<div class="col-md-8 noPadding noMargin">
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
-								<div class="col-md-8">+91 8698081168</div>
+								<div class="col-xs-4 col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
+								<div class="col-xs-8 col-md-8">+91 8698081168</div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
-								<div class="col-md-8">swapsk.8@gmail.com</div>
+								<div class="col-xs-4 col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
+								<div class="col-xs-8 col-md-8">swapsk.8@gmail.com</div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
-								<div class="col-md-8">Pune, Maharashtra</div>
+								<div class="col-xs-4 col-md-4 connectIconHolder"><img src="images/fb_logo.png"/></div>
+								<div class="col-xs-8 col-md-8">Pune, Maharashtra</div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4">Name</div>
-								<div class="col-md-8"><input type="textbox" name="name"/></div>
+								<div class="col-xs-4 col-md-4">Name</div>
+								<div class="col-xs-8 col-md-8"><input type="textbox" name="name"/></div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4">Email</div>
-								<div class="col-md-8"><input type="textbox" name="email"/></div>
+								<div class="col-xs-4 col-md-4">Email</div>
+								<div class="col-xs-8 col-md-8"><input type="textbox" name="email" placeholder="email"/></div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4">Message</div>
-								<div class="col-md-8"><textarea name="message" rows="5"></textarea></div>
+								<div class="col-xs-4 col-md-4">Message</div>
+								<div class="col-xs-8 col-md-8"><textarea name="message" rows="5"></textarea></div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
 								<div class="col-md-4"><button name="send">Send</button></div>
