Fixes for mobile device

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								<div class="col-xs-8 col-md-8"><textarea name="message" rows="5"></textarea></div>
 							</div>
 							<div class="row noPadding noMargin connectContentRow">
-								<div class="col-md-4"><button name="send">Send</button></div>
+								<div class="col-md-4 sendButtonHolder"><button name="send">Send</button></div>
 							</div>
 						</div>
 						<div class="col-md-2 noPadding noMargin"></div>
