Fixed horizontal scroll issues

--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentPortfolioDetail">
-				<div class="row portfolioDetailHeader">
+				<div class="row portfolioDetailHeader noPadding noMargin">
 					<div class="col-xs-10 col-md-10" id="portfolioDetailDisplayValue"></div>
 					<div class="col-xs-2 col-md-2 closeButton">
 						<img src="images/close.png" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
 					</div>
 				</div>
-				<div class="row portfolioDetailImageHolder" id="portfolioDetailCalligraphy">
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailCalligraphy">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/Calligraphy_Detail.png"/>
 					</div>
 				</div>
-				<div class="row portfolioDetailImageHolder" id="portfolioDetailGipoor">
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailGipoor">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/Gipoor_Detail.png" class="centerAlignImage"/>
 					</div>
@@ -128,7 +128,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row portfolioDetailImageHolder" id="portfolioDetailCookieBites">
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailCookieBites">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/cookie_bites_detail.png" class="centerAlignImage"/>
 					</div>
@@ -141,12 +141,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="row portfolioDetailImageHolder" id="portfolioDetailEmpoweringSouls">
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailEmpoweringSouls">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/empowering_souls_detail.png" class="centerAlignImage"/>
 					</div>
 				</div>
-				<div class="row portfolioDetailImageHolder" id="portfolioDetailDaawatEKebab">
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailDaawatEKebab">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/Daawat_e_kebab.png" class="centerAlignImage"/>
 					</div>
@@ -157,7 +157,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row portfolioDetailImageHolder" id="portfolioDetailUsaas">
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailUsaas">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/usaas_detail.png" class="centerAlignImage"/>
 					</div>
