--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 						<img src="images/Gipoor_Detail.png" class="centerAlignImage"/>
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							Gipoor, a logo created for Iran based Fashion designer was a special experience. 
 						</div>
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							The design is a reflection of Iran's traditional fabric pattern named Dantel, having gipoor embedded in the logo.
 						</div>
 					</div>
@@ -133,10 +133,10 @@
 						<img src="images/cookie_bites_detail.png" class="centerAlignImage"/>
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							Cookie bites is a Pune's establishing cookie brand having delicious flavours and wide range of cookies.
 						</div>
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							A simple yet catchy logo which is apt representation for everybody's favourite munchies, cookies!
 						</div>
 					</div>
@@ -148,12 +148,14 @@
 				</div>
 				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailDaawatEKebab">
 					<div class="row col-md-12 noPadding noMargin">
-						<img src="images/Daawat_e_kebab.png" class="centerAlignImage"/>
+						<img src="images/daawatekebab_detail.png" class="centerAlignImage"/>
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
-							A Typographical logotype for the Pune's restaurant. Daawt - e - kebab is all about feast of kebabs which is 
-							a middle eastern food speciality popular among the world.
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A Typographical logotype for the Pune's restaurant.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							Daawt - e - kebab is all about feast of kebabs which is a middle eastern food speciality popular among the world.
 						</div>
 					</div>
 				</div>
@@ -162,13 +164,13 @@
 						<img src="images/usaas_detail.png" class="centerAlignImage"/>
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							A very unique logo which a blend of Ether energy and technology resulting into energy solutions.
 						</div>
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							Logo has seven colors of chakras with a vector of technology network ingrained.
 						</div>
-						<div class="col-xs-offset-1 col-xs-11 col-md-12">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							The name Usaas means a goddess of Early morning.
 						</div>
 					</div>
